--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
+/* bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -13,6 +14,7 @@ body {
   align-content: center;
   align-items: center;
   padding: 30px;
+  background-color: #c6cccc29;
 }
 
 code {
@@ -22,7 +24,13 @@ code {
 
 ul {
   list-style: none;
+  margin: 0;
 }
+
 p {
+  margin: 0;
+}
+h2 {
+  display: block;
   margin: 0;
 }
